# leptos-rust

./: CAN_BUS_INTEGRATION.md  Cargo.toml  EMBEDDED_PERFORMANCE.md  EXPLANATION.md  LIVE_DATA_INTEGRATION.md  MULTI_USER_ARCHITECTURE.md  README.md
app/: Cargo.toml
app/src/: lib.rs
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: live_data.rs  main.rs
src/: can_types.rs  multi_user_types.rs
